fix report