@@ -1,15 +1,16 @@
 package ru.vk.itmo.test.georgiidalbeev;
 
 import ru.vk.itmo.ServiceConfig;
-import ru.vk.itmo.test.smirnovandrew.MyService;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 public final class Server {
-    private static final String DIR = "tmp/dao";
+
+    private static final String DIRECTORY = "tmp/dao";
 
     private Server() {
 
@@ -17,16 +18,17 @@ public final class Server {
 
     @SuppressWarnings("FutureReturnValueIgnored")
     public static void main(String[] args) throws IOException {
-        Path path = Path.of(DIR);
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
+        Path directoryPath = Paths.get(DIRECTORY);
+        if (!Files.exists(directoryPath)) {
+            Files.createDirectories(directoryPath);
         }
-        MyService service = new MyService(
+
+        NewService service = new NewService(
                 new ServiceConfig(
                         8080,
-                        "http://localhost:8080",
-                        List.of("http://localhost:8080"),
-                        path
+                        "http://localhost",
+                        List.of("http://localhost"),
+                        directoryPath
                 )
         );
 
